package edu.fiuba.algo3.modelo.carta;

public interface Palo {
    boolean esDeEstePalo(Palo palo);
}
