@startuml
skinparam classAttributeIconSize 0
class CartaInglesa {

-numero: int
+obtenerPuntos(): Puntaje
+cambiarPalo(Palo)
+cambiarNumero(numero: int)
+aplicarEstado()
}

interface Estado {
+{abstract}aplicarModificador(Puntaje): Puntaje
}

CartaInglesa *-- Estado :tiene

interface Palo {
+{abstract}esDeEstePalo(p Palo): bool
}

CartaInglesa *-- Palo :tiene

class Trebol {
+esDeEstePalo(p Palo): bool
}

class Corazon {
+esDeEstePalo(p Palo): bool
}

class Pica {
+esDeEstePalo(p Palo): bool
}

class Diamante {
+esDeEstePalo(p Palo): bool
}

Trebol .up.|> Palo
Corazon .up.|> Palo
Diamante .down.|> Palo
Pica .down.|> Palo

@enduml